--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
         </section>
         <footer>
             <h1>Delivery lunch</h1>
-            <a href="https://www.instagram.com/delivery.lunch_/" target="blank">- Visita nuestro instagram</a>
+            <a href="https://www.instagram.com/delivery.lunch_/" target="blank"><ion-icon name="logo-instagram"></ion-icon></a>
         </footer>
     </div>
-    
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </body>
 </html>
